Run monaco-editor in iframe
So we can use Typescript auto-complete well :)

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -132,7 +132,7 @@
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="quickstart-editor"></div>
+                    <iframe class="editor-container" id="quickstart-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="quickstart-output">Click "Run" to execute the code</div>
                 </div>
             </section>
@@ -196,7 +196,7 @@ define(["jimple"], function(Jimple) {
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="services-editor"></div>
+                    <iframe class="editor-container" id="services-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="services-output">Click "Run" to execute the code</div>
                 </div>
 
@@ -211,7 +211,7 @@ define(["jimple"], function(Jimple) {
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="parameters-editor"></div>
+                    <iframe class="editor-container" id="parameters-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="parameters-output">Click "Run" to execute the code</div>
                 </div>
 
@@ -226,7 +226,7 @@ define(["jimple"], function(Jimple) {
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="factory-editor"></div>
+                    <iframe class="editor-container" id="factory-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="factory-output">Click "Run" to execute the code</div>
                 </div>
             </section>
@@ -285,7 +285,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="proxy-editor"></div>
+                    <iframe class="editor-container" id="proxy-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="proxy-output">Click "Run" to execute the code</div>
                 </div>
 
@@ -309,7 +309,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                             <button class="playground-btn active" data-lang="typescript">TypeScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="typescript-editor"></div>
+                    <iframe class="editor-container" id="typescript-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="typescript-output">Click "Run" to execute the code</div>
                 </div>
             </section>
@@ -392,7 +392,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="express-editor"></div>
+                    <iframe class="editor-container" id="express-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="express-output">Click "Run" to execute the code</div>
                 </div>
 
@@ -405,7 +405,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                             <button class="playground-btn" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
-                    <div class="editor-container" id="testing-editor"></div>
+                    <iframe class="editor-container" id="testing-editor" border="0" loading="lazy"></iframe>
                     <div class="output" id="testing-output">Click "Run" to execute the code</div>
                 </div>
             </section>
