--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -128,8 +128,7 @@
                     <div class="playground-header">
                         <span class="playground-title">Interactive Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="quickstart-editor" border="0" loading="lazy"></iframe>
@@ -192,8 +191,7 @@ define(["jimple"], function(Jimple) {
                     <div class="playground-header">
                         <span class="playground-title">Services Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="services-editor" border="0" loading="lazy"></iframe>
@@ -207,8 +205,7 @@ define(["jimple"], function(Jimple) {
                     <div class="playground-header">
                         <span class="playground-title">Parameters Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="parameters-editor" border="0" loading="lazy"></iframe>
@@ -222,8 +219,7 @@ define(["jimple"], function(Jimple) {
                     <div class="playground-header">
                         <span class="playground-title">Factory Services Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="factory-editor" border="0" loading="lazy"></iframe>
@@ -281,8 +277,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                     <div class="playground-header">
                         <span class="playground-title">Proxy Mode Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="proxy-editor" border="0" loading="lazy"></iframe>
@@ -388,8 +383,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                     <div class="playground-header">
                         <span class="playground-title">Express.js Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="express-editor" border="0" loading="lazy"></iframe>
@@ -401,8 +395,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                     <div class="playground-header">
                         <span class="playground-title">Testing Example</span>
                         <div class="playground-buttons">
-                            <button class="playground-btn active" data-lang="typescript">TypeScript</button>
-                            <button class="playground-btn" data-lang="javascript">JavaScript</button>
+                            <button class="playground-btn active" data-lang="javascript">JavaScript</button>
                         </div>
                     </div>
                     <iframe class="editor-container" id="testing-editor" border="0" loading="lazy"></iframe>
