--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -288,7 +288,7 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                 <ul>
                     <li>Can't overwrite built-in methods (<code class="inline-code">set</code>, <code class="inline-code">get</code>, etc.)</li>
                     <li>Accessing non-existent properties throws an error</li>
-                    <li>TypeScript requires special handling</li>
+                    <li>TypeScript requires special handling (see below)</li>
                 </ul>
             </section>
 
