Run prettier on the project

--- a/docs-src/iframe.html
+++ b/docs-src/iframe.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Playground</title>
-</head>
-<body style="overflow: hidden">
-<div id="editor" style="height: 300px;"></div>
-</body>
+  </head>
+  <body style="overflow: hidden">
+    <div id="editor" style="height: 300px"></div>
+  </body>
 </html>
