Improve mobile interface for docs

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -17,6 +17,12 @@
       <div class="container">
         <nav class="nav">
           <a href="#" class="logo">Jimple</a>
+          <!-- Mobile menu button -->
+          <button class="mobile-menu-btn" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <ul class="nav-links">
             <li><a href="#quick-start">Quick Start</a></li>
             <li><a href="#docs">Guide</a></li>
