Use vite instead of webpack to build the docs site
Because it is faster, modern, and we're already using vite anyway :)

--- a/docs-src/iframe.html
+++ b/docs-src/iframe.html
@@ -7,5 +7,6 @@
   </head>
   <body style="overflow: hidden">
     <div id="editor" style="height: 300px"></div>
+    <script type="module" src="scripts/iframe.js"></script>
   </body>
 </html>
