--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -629,5 +629,6 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
         </main>
       </div>
     </div>
+    <script type="module" src="scripts/main.js"></script>
   </body>
 </html>
