--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -197,16 +197,16 @@
               </div>
               <div class="tab-content">
                 <div class="tab-pane active" id="tab-npm">
-                  <pre><code>npm install jimple</code></pre>
+                  <pre><code>npm install jimple@2.0.0-beta.1</code></pre>
                 </div>
                 <div class="tab-pane" id="tab-pnpm">
-                  <pre><code>pnpm add jimple</code></pre>
+                  <pre><code>pnpm add jimple@2.0.0-beta.1</code></pre>
                 </div>
                 <div class="tab-pane" id="tab-yarn">
-                  <pre><code>yarn add jimple</code></pre>
+                  <pre><code>yarn add jimple@2.0.0-beta.1</code></pre>
                 </div>
                 <div class="tab-pane" id="tab-bun">
-                  <pre><code>bun add jimple</code></pre>
+                  <pre><code>bun add jimple@2.0.0-beta.1</code></pre>
                 </div>
               </div>
             </div>
