--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -492,8 +492,13 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
 
             <div class="api-details-box">
               <h4 class="api-details-title">Need More Details?</h4>
-              <p class="api-details-desc">For complete API documentation with detailed examples and type definitions:</p>
-              <a href="api/" class="btn btn-primary api-details-link">View Full API Documentation →</a>
+              <p class="api-details-desc">
+                For complete API documentation with detailed examples and type
+                definitions:
+              </p>
+              <a href="api/" class="btn btn-primary api-details-link"
+                >View Full API Documentation →</a
+              >
             </div>
           </section>
 
@@ -551,14 +556,26 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
               <div class="documentation-card">
                 <div class="documentation-card-icon">📖</div>
                 <h3 class="documentation-card-title">Interactive Guide</h3>
-                <p class="documentation-card-desc">This page! Learn Jimple with live examples, tutorials, and hands-on code playgrounds.</p>
-                <a href="#quick-start" class="btn documentation-card-link-primary">Start Learning</a>
+                <p class="documentation-card-desc">
+                  This page! Learn Jimple with live examples, tutorials, and
+                  hands-on code playgrounds.
+                </p>
+                <a
+                  href="#quick-start"
+                  class="btn documentation-card-link-primary"
+                  >Start Learning</a
+                >
               </div>
               <div class="documentation-card">
                 <div class="documentation-card-icon">📚</div>
                 <h3 class="documentation-card-title">Complete API Reference</h3>
-                <p class="documentation-card-desc">Detailed JSDoc documentation with full method signatures, parameters, and comprehensive examples.</p>
-                <a href="api/" class="btn documentation-card-link-accent">View API Docs</a>
+                <p class="documentation-card-desc">
+                  Detailed JSDoc documentation with full method signatures,
+                  parameters, and comprehensive examples.
+                </p>
+                <a href="api/" class="btn documentation-card-link-accent"
+                  >View API Docs</a
+                >
               </div>
             </div>
           </section>
