Improve mobile menu
So it doesn't conflict with the button to switch themes

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -29,14 +29,16 @@
             <li><a href="api/">API Docs</a></li>
             <li><a href="#examples">Examples</a></li>
             <li><a href="https://github.com/fjorgemota/jimple">GitHub</a></li>
+            <li class="theme-toggle-container">
+              <button
+                id="theme-toggle"
+                aria-label="Switch theme"
+                title="Switch theme"
+              >
+                🌙
+              </button>
+            </li>
           </ul>
-          <button
-            id="theme-toggle"
-            aria-label="Switch theme"
-            title="Switch theme"
-          >
-            🌙
-          </button>
         </nav>
       </div>
     </header>
