--- a/docs-src/iframe.html
+++ b/docs-src/iframe.html
@@ -5,7 +5,7 @@
     <title>Playground</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body style="overflow: hidden; margin:0; padding: 0;">
+  <body style="overflow: hidden; margin: 0; padding: 0">
     <div id="editor" style="height: 300px"></div>
     <script type="module" src="scripts/iframe.js"></script>
   </body>
