--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -456,6 +456,11 @@ const db2 = dbFactory(container); // Create another instance manually</code></pr
                   <td><code>void</code></td>
                 </tr>
                 <tr>
+                  <td><code>unset(id, value)</code></td>
+                  <td>Unset a service or parameter</td>
+                  <td><code>void</code></td>
+                </tr>
+                <tr>
                   <td><code>get(id)</code></td>
                   <td>Retrieve a service or parameter</td>
                   <td><code>any</code></td>
