Fix JSDelivr URL

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -222,12 +222,7 @@
             </div>
 
             <h3>CDN (Browser)</h3>
-            <pre><code>&lt;script src="https://cdn.jsdelivr.net/npm/jimple@latest/src/Jimple.js"&gt;&lt;/script&gt;</code></pre>
-            <p>
-              <strong>⚠️ Production Warning:</strong> Replace
-              <code class="inline-code">latest</code> with a specific version
-              for production use.
-            </p>
+            <pre><code>&lt;script src="https://cdn.jsdelivr.net/npm/jimple@2.0.0-beta.4/dist/Jimple.umd.js"&gt;&lt;/script&gt;</code></pre>
 
             <h3>Import Methods</h3>
             <pre><code>// ES6 Modules
