Change title of the section to remove services

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -372,7 +372,7 @@ define(["jimple"], function(Jimple) {
               </div>
             </div>
 
-            <h3>Removing Services</h3>
+            <h3>Removing Services or Parameters</h3>
             <p>Remove services or parameters from the container with <code class="inline-code">unset()</code>:</p>
             <pre><code>container.set('logger', (c) => new Logger());
 container.set('apiUrl', 'https://api.example.com');
