Improve wording of the docs for the unset() method

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -547,7 +547,7 @@ define(["jimple"], function(Jimple) {
                 </tr>
                 <tr>
                   <td><code>unset(id, value)</code></td>
-                  <td>Unset a service or parameter</td>
+                  <td>Remove a service or parameter</td>
                   <td><code>void</code></td>
                 </tr>
                 <tr>
